# voxkey

./: .gitignore  README.md  meson.build  meson_options.txt
src/: audio_pulse.cpp  audio_pulse.h  config.cpp  config.h  hotkey_x11.cpp  hotkey_x11.h  main.cpp  output_x11.cpp  output_x11.h  ring_buffer.h  transcriber_stub.cpp  transcriber_whisper.cpp  transcriber_whisper.h  util.h
